fixed select on safari mac

--- a/packages/scandipwa/src/style/base/_reset.scss
+++ b/packages/scandipwa/src/style/base/_reset.scss
@@ -364,6 +364,10 @@ select {
     }
 }
 
+select {
+    -webkit-appearance: none;
+}
+
 textarea {
     resize: none;
 
